--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=1200">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Beats</title>
   <link rel="stylesheet" href="./css/main.css">
 </head>
@@ -15,38 +15,45 @@
       <section class="hero">
         <div class="container hero__container">
           <header class="header">
-            <img src="./img/logo.png" alt="" class="logo">
-            <nav class="menu">
-              <ul class="menu__list">
-                <li class="menu__item">
-                  <a href="" class="menu__link">О нас</a>
-                </li>
-                <li class="menu__item">
-                  <a href="" class="menu__link">Наушники</a>
-                </li>
-                <li class="menu__item">
-                  <a href="" class="menu__link">Команда</a>
-                </li>
-                <li class="menu__item">
-                  <a href="" class="menu__link">Цвета</a>
-                </li>
-                <li class="menu__item">
-                  <a href="" class="menu__link">Отзывы</a>
-                </li>
-                <li class="menu__item">
-                  <a href="" class="menu__link">Как мы работаем</a>
-                </li>
-                <li class="menu__item">
-                  <a href="" class="menu__link">Контакты </a>
-                </li>
-              </ul>
-            </nav>
-            <a href="tel:+78009039090" class="phone-number">
-              <span class="phone-number__icon">
-                <img src="./img/icons/phone.svg" class="phone-number__icon-elem" alt="">
-              </span>
-              <span class="phone-number__text">8 800 903 90 90</span>
-            </a>
+              <img src="./img/icons/logo.svg" alt="" class="logo">
+              <nav class="menu">
+                <ul class="menu__list">
+                  <li class="menu__item">
+                    <a href="" class="menu__link">О нас</a>
+                  </li>
+                  <li class="menu__item">
+                    <a href="" class="menu__link">Наушники</a>
+                  </li>
+                  <li class="menu__item">
+                    <a href="" class="menu__link">Команда</a>
+                  </li>
+                  <li class="menu__item">
+                    <a href="" class="menu__link">Цвета</a>
+                  </li>
+                  <li class="menu__item">
+                    <a href="" class="menu__link">Отзывы</a>
+                  </li>
+                  <li class="menu__item">
+                    <a href="" class="menu__link">Как мы работаем</a>
+                  </li>
+                  <li class="menu__item">
+                    <a href="" class="menu__link">Контакты </a>
+                  </li>
+                </ul>
+              </nav>
+              <a href="tel:+78009039090" class="phone-number header__phone-number">
+                <span class="phone-number__icon">
+                  <svg class="phone-number__icon-elem">
+                    <use xlink:href="./img/icons/sprite.svg#phone"></use>
+                  </svg>
+                </span>
+                <span class="phone-number__text">8 800 903 90 90</span>
+              </a>
+              <a href="" class="hamburger">
+                <span class="hamburger__plank"></span>
+                <span class="hamburger__plank"></span>
+                <span class="hamburger__plank"></span>
+              </a>
           </header>
           <div class="hero__title-section">
             <h1 class="hero__main-title">Беспроводные наушники Beats Solo 3</h1>
@@ -57,21 +64,21 @@
           <div class="hero__icons-section">
             <ul class="features">
               <li class="features__item feature">
-                <div class="feature__icon">
-                  <img src="./img/icons/Listening.svg" alt="">
-                </div>
+                  <svg class="feature__icon">
+                    <use xlink:href="./img/icons/sprite.svg#Listening"></use>
+                  </svg>
                 <div class="feature__text">Безупречный звук</div>
               </li>
               <li class="features__item feature">
-                <div class="feature__icon">
-                  <img src="./img/icons/charging.svg" alt="">
-                </div>
+                <svg class="feature__icon">
+                  <use xlink:href="./img/icons/sprite.svg#charging"></use>
+                </svg>
                 <div class="feature__text">До 40 часов работы</div>
               </li>
               <li class="features__item feature">
-                <div class="feature__icon">
-                  <img src="./img/icons/plug.svg" alt="">
-                </div>
+                <svg class="feature__icon">
+                  <use xlink:href="./img/icons/sprite.svg#plug"></use>
+                </svg>
                 <div class="feature__text">Технология Fast Fuel</div>
               </li>
             </ul>
@@ -79,17 +86,19 @@
         </div>
       </section>
       <section class="section benefits-section">
-        <div class="container">
+        <div class="container benefits-section__container">
           <div class="headline">
             <h2 class="section__title headline__title">почему beats solo 3?</h2>
-            <div class="headline__subtitle">Процессор W1 работает невероятно эффективно и позволяет легко 
+            <div class="headline__subtitle benefits-section__subtitle">Процессор W1 работает невероятно эффективно и позволяет легко 
               подключать наушники к различным устройствам Apple.</div>
           </div>
           <ul class="benefits">
             <li class="benefits__item benefit">
               <div class="benefit__image">
                 <div class="benefit__image-wrapper">
-                  <img src="./img/icons/battery.svg" alt="" class="benefit__icon">
+                  <svg class="benefit__icon">
+                    <use xlink:href="./img/icons/sprite.svg#battery"></use>
+                  </svg>
                 </div>
               </div>
               <div class="benefit__text">
@@ -106,7 +115,9 @@
             <li class="benefits__item benefit">
               <div class="benefit__image">
                 <div class="benefit__image-wrapper">
-                  <img src="./img/icons/sound.svg" alt="" class="benefit__icon">
+                  <svg class="benefit__icon">
+                    <use xlink:href="./img/icons/sprite.svg#sound"></use>
+                  </svg>
                 </div>
               </div>
               <div class="benefit__text">
@@ -124,7 +135,9 @@
             <li class="benefits__item benefit">
               <div class="benefit__image">
                 <div class="benefit__image-wrapper">
-                  <img src="./img/icons/time.svg" alt="" class="benefit__icon">
+                  <svg class="benefit__icon">
+                    <use xlink:href="./img/icons/sprite.svg#time"></use>
+                  </svg>
                 </div>
               </div>
               <div class="benefit__text">
@@ -254,6 +267,56 @@
             </div>
           </form>
         </div>
+      </section>
+      <section class="section map-section">
+        <div class="map"></div>
+        <footer class="footer">
+          <div class="container footer__container">
+            <address class="contacts">
+              <div class="contacts__place">
+                Москва, ул.Новый Арбат, д.31/12
+              </div>
+              <a href="tel:+78009039090" class="phone-number">
+                <span class="phone-number__icon">
+                  <svg class="phone-number__icon-elem">
+                    <use xlink:href="./img/icons/sprite.svg#phone"></use>
+                  </svg>
+                </span>
+                <span class="phone-number__text">8 800 903 90 90</span>
+              </a>
+            </address>
+            <ul class="socials">
+              <li class="socials__item">
+                <a href="#" class="socials__link">
+                  <svg class="socials__icon">
+                    <use xlink:href="./img/icons/sprite.svg#vk"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="socials__item">
+                <a href="#" class="socials__link">
+                  <svg class="socials__icon">
+                    <use xlink:href="./img/icons/sprite.svg#fb"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="socials__item">
+                <a href="#" class="socials__link">
+                  <svg class="socials__icon">
+                    <use xlink:href="./img/icons/sprite.svg#inst"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="socials__item">
+                <a href="#" class="socials__link">
+                  <svg class="socials__icon">
+                    <use xlink:href="./img/icons/sprite.svg#tg"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </footer>
       </section>
     </div>
   </div>
