add slider and fullscreen menu

--- a/index.html
+++ b/index.html
@@ -154,6 +154,102 @@
           </ul>
         </div>
       </section>
+      <section class="section products-section">
+        <div class="container slider">
+          <div class="slider__list-wrap">
+            <ul class="slider__list">
+              <li class="slider__item slide">
+                <div class="slide__img-wrap">
+                  <img src="./img/headphones-btm.png" alt="" class="slide__img">
+                </div>
+                <div class="slide__content">
+                  <div class="slide__params params">
+                      <svg class="slide__params-img">
+                        <use xlink:href="./img/icons/sprite.svg#gear"></use>
+                      </svg>
+                      <ul class="params__list">
+                        <li class="params__item param">
+                          <svg class="param-img">
+                            <use xlink:href="./img/icons/sprite.svg#bluetooth"></use>
+                          </svg>
+                          <div class="param__info">
+                            <div class="param__title">Bluetooth</div>
+                            <div class="param__value">4.0</div>
+                          </div>
+                        </li>
+                        <li class="params__item param">
+                          <svg class="param-img">
+                            <use xlink:href="./img/icons/sprite.svg#road"></use>
+                          </svg>
+                          <div class="param__info">
+                            <div class="param__title">Дальность </div>
+                            <div class="param__value">12 м</div>
+                          </div>
+                        </li>
+                        <li class="params__item param">
+                          <svg class="param-img">
+                            <use xlink:href="./img/icons/sprite.svg#charger"></use>
+                          </svg>
+                          <div class="param__info">
+                            <div class="param__title">Зарядка</div>
+                            <div class="param__value">3 ч</div>
+                          </div>
+                        </li>
+                        <li class="params__item param">
+                          <svg class="param-img">
+                            <use xlink:href="./img/icons/sprite.svg#kg"></use>
+                          </svg>
+                          <div class="param__info">
+                            <div class="param__title">Вес</div>
+                            <div class="param__value">215гр</div>
+                          </div>
+                        </li>
+                        <li class="params__item param">
+                          <svg class="param-img">
+                            <use xlink:href="./img/icons/sprite.svg#patent"></use>
+                          </svg>
+                          <div class="param__info">
+                            <div class="param__title">Гарантия</div>
+                            <div class="param__value">1 год</div>
+                          </div>
+                        </li>
+                      </ul>
+                  </div>
+                  <h2 class="slide__title">beats solo 3. цвет 
+                    «атласное серебро»</h2>
+                  <div class="slide__desc">
+                    <p>Беспроводные наушники Beats Solo3 готовы к работе в любой момент. Включите их и поднесите к своему iPhone — они мгновенно подключатся к нему.</p>
+                  </div>
+                  <ul class="slide__info info__list">
+                    <li class="info__item info">
+                      <div class="info__title">Зарядка</div>
+                      <div class="info__desc">2  часа</div>
+                    </li>
+                    <li class="info__item info">
+                      <div class="info__title">Вес</div>
+                      <div class="info__desc">215 грамм</div>
+                    </li>
+                  </ul>
+                  <div class="slide__bottom">
+                    <div class="slide__price">14 990 ₽</div>
+                    <a href="#" class="btn slider__btn">Заказать</a>
+                  </div>
+                </div>
+              </li>
+            </ul>
+          </div>
+          <div class="slider__arrow slider__arrow--left">
+            <svg class="slider__arrow-img">
+              <use xlink:href="./img/icons/sprite.svg#arrow-left"></use>
+            </svg>
+          </div>
+          <div class="slider__arrow slider__arrow--right">
+            <svg class="slider__arrow-img">
+              <use xlink:href="./img/icons/sprite.svg#arrow-right"></use>
+            </svg>
+          </div>
+        </div>
+      </section>
       <section class="section reviews-section">
         <div class="container">
           <h2 class="section__title">Отзывы</h2>
@@ -351,5 +447,38 @@
       </li>
     </ul>
   </nav>
+  <div class="fullscreen-menu">
+    <a href="#" class="fullscreen-menu__exit">
+      <svg class="fullscreen-menu__exit-img">
+        <use xlink:href="./img/icons/sprite.svg#close"></use>
+      </svg>
+    </a>
+    <nav class="menu menu--vertical">
+      <ul class="menu__list">
+        <li class="menu__item">
+          <a href="" class="menu__link">О нас</a>
+        </li>
+        <li class="menu__item">
+          <a href="" class="menu__link">Наушники</a>
+        </li>
+        <li class="menu__item">
+          <a href="" class="menu__link">Команда</a>
+        </li>
+        <li class="menu__item">
+          <a href="" class="menu__link">Цвета</a>
+        </li>
+        <li class="menu__item">
+          <a href="" class="menu__link">Отзывы</a>
+        </li>
+        <li class="menu__item">
+          <a href="" class="menu__link">Как мы работаем</a>
+        </li>
+        <li class="menu__item">
+          <a href="" class="menu__link">Контакты </a>
+        </li>
+      </ul>
+    </nav>
+  </div>
+  <script src="./js/fullscreen-menu.js"></script>
 </body>
 </html>
