--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Beats</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
   <link rel="stylesheet" href="./css/main.css">
 </head>
 
@@ -236,6 +238,83 @@
                   </div>
                 </div>
               </li>
+              <li class="slider__item slide">
+                <div class="slide__img-wrap">
+                  <img src="./img/headphones-red.png" alt="" class="slide__img">
+                </div>
+                <div class="slide__content">
+                  <div class="slide__params params">
+                      <svg class="slide__params-img">
+                        <use xlink:href="./img/icons/sprite.svg#gear"></use>
+                      </svg>
+                      <ul class="params__list">
+                        <li class="params__item param">
+                          <svg class="param-img">
+                            <use xlink:href="./img/icons/sprite.svg#bluetooth"></use>
+                          </svg>
+                          <div class="param__info">
+                            <div class="param__title">Bluetooth</div>
+                            <div class="param__value">4.0</div>
+                          </div>
+                        </li>
+                        <li class="params__item param">
+                          <svg class="param-img">
+                            <use xlink:href="./img/icons/sprite.svg#road"></use>
+                          </svg>
+                          <div class="param__info">
+                            <div class="param__title">Дальность </div>
+                            <div class="param__value">10 м</div>
+                          </div>
+                        </li>
+                        <li class="params__item param">
+                          <svg class="param-img">
+                            <use xlink:href="./img/icons/sprite.svg#charger"></use>
+                          </svg>
+                          <div class="param__info">
+                            <div class="param__title">Зарядка</div>
+                            <div class="param__value">2 ч</div>
+                          </div>
+                        </li>
+                        <li class="params__item param">
+                          <svg class="param-img">
+                            <use xlink:href="./img/icons/sprite.svg#kg"></use>
+                          </svg>
+                          <div class="param__info">
+                            <div class="param__title">Вес</div>
+                            <div class="param__value">215гр</div>
+                          </div>
+                        </li>
+                        <li class="params__item param">
+                          <svg class="param-img">
+                            <use xlink:href="./img/icons/sprite.svg#patent"></use>
+                          </svg>
+                          <div class="param__info">
+                            <div class="param__title">Гарантия</div>
+                            <div class="param__value">1 год</div>
+                          </div>
+                        </li>
+                      </ul>
+                  </div>
+                  <h2 class="slide__title">beats solo pro. цвет «красный цитрус»</h2>
+                  <div class="slide__desc">
+                    <p>Беспроводные наушники Solo Pro помогают настроиться на творчество. Для этого предусмотрено два режима прослушивания: режим с активным шумоподавлением и Прозрачный режим.</p>
+                  </div>
+                  <ul class="slide__info info__list">
+                    <li class="info__item info">
+                      <div class="info__title">Зарядка</div>
+                      <div class="info__desc">2  часа</div>
+                    </li>
+                    <li class="info__item info">
+                      <div class="info__title">Вес</div>
+                      <div class="info__desc">215 грамм</div>
+                    </li>
+                  </ul>
+                  <div class="slide__bottom">
+                    <div class="slide__price">14 990 ₽</div>
+                    <a href="#" class="btn slider__btn">Заказать</a>
+                  </div>
+                </div>
+              </li>
             </ul>
           </div>
           <div class="slider__arrow slider__arrow--left">
@@ -250,59 +329,209 @@
           </div>
         </div>
       </section>
+      <section class="section team-section">
+        <div class="container">
+          <h2 class="section__title">команда</h2>
+          <ul class="team team--version-desktop">
+            <li class="team__item">
+              <div class="team__member">
+                <img src="./img/team/boris.png" alt="" class="team__member-img">
+              </div>
+              <button class="team__title" type="button">Борис Федорович</button>
+              <div class="team__content">
+                <div class="team__content-block">
+                  <div class="team__profession">Главный технолог</div>
+                  <div class="team__occupation">Отвечает за вкусовые качества 
+                    и калорийность.
+                    </div>
+                </div>
+              </div>
+            </li>
+            <li class="team__item">
+              <div class="team__member">
+                <img src="./img/team/alla.png" alt="" class="team__member-img">
+              </div>
+              <button class="team__title" type="button">Алла Иванова</button>
+              <div class="team__content">
+                <div class="team__content-block">
+                  <div class="team__profession">Специалист по упаковке</div>
+                  <div class="team__occupation">Автор запоминающегося стиля 
+                    наших батончиков.
+                    </div>
+                </div>
+              </div>
+            </li>
+            <li class="team__item">
+              <div class="team__member">
+                <img src="./img/team/kirill.png" alt="" class="team__member-img">
+              </div>
+              <button class="team__title" type="button">Кирилл Матросов</button>
+              <div class="team__content">
+                <div class="team__content-block">
+                  <div class="team__profession">Оператор</div>
+                  <div class="team__occupation">Разработал дизан
+                    наушников beats solo 3.
+                    </div>
+                </div>
+              </div>
+            </li>
+            <li class="team__item">
+              <div class="team__member">
+                <img src="./img/team/mila.png" alt="" class="team__member-img">
+              </div>
+              <button class="team__title" type="button">Мила Рыжкова</button>
+              <div class="team__content">
+                <div class="team__content-block">
+                  <div class="team__profession">PR, маркетинг</div>
+                  <div class="team__occupation">По всем вопросам сотрудничества 
+                    и рекламы писать только Миле. 
+                    </div>
+                </div>
+              </div>
+            </li>
+          </ul>
+          <ul class="team team--version-mobile">
+            <li class="team__item">
+              <button class="team__title" type="button">Борис Федорович</button>
+              <div class="team__content">
+                <div class="team__content-block">
+                  <div class="team__member">
+                    <img src="./img/team/boris.png" alt="" class="team__member-img">
+                  </div>
+                  <div class="team__profession">Главный технолог</div>
+                  <div class="team__occupation">Отвечает за вкусовые качества 
+                    и калорийность.
+                    </div>
+                </div>
+              </div>
+            </li>
+            <li class="team__item">
+              <button class="team__title" type="button">Алла Иванова</button>
+              <div class="team__content">
+                <div class="team__content-block">
+                  <div class="team__member">
+                    <img src="./img/team/alla.png" alt="" class="team__member-img">
+                  </div>
+                  <div class="team__profession">Специалист по упаковке</div>
+                  <div class="team__occupation">Автор запоминающегося стиля 
+                    наших батончиков.
+                    </div>
+                </div>
+              </div>
+            </li>
+            <li class="team__item">
+              <button class="team__title" type="button">Кирилл Матросов</button>
+              <div class="team__content">
+                <div class="team__content-block">
+                  <div class="team__member">
+                    <img src="./img/team/kirill.png" alt="" class="team__member-img">
+                  </div>
+                  <div class="team__profession">Оператор</div>
+                  <div class="team__occupation">Разработал дизан
+                    наушников beats solo 3.
+                    </div>
+                </div>
+              </div>
+            </li>
+            <li class="team__item">
+              <button class="team__title" type="button">Мила Рыжкова</button>
+              <div class="team__content">
+                <div class="team__content-block">
+                  <div class="team__member">
+                    <img src="./img/team/mila.png" alt="" class="team__member-img">
+                  </div>
+                  <div class="team__profession">PR, маркетинг</div>
+                  <div class="team__occupation">По всем вопросам сотрудничества 
+                    и рекламы писать только Миле. 
+                    </div>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
       <section class="section reviews-section">
         <div class="container">
           <h2 class="section__title">Отзывы</h2>
-          <div class="reviews">
             <div class="reviews__display">
-              <div class="reviews__display-inner">
-                <div class="reviews__avatar">
-                  <img src="./img/avatars/billy.png" alt="" class="reviews__avatar-img">
-                </div>
-                <article class="reviews__content">
-                  <h3 class="reviews__title">Отличный звук</h3>
-                  <div class="reviews__text">
-                    <p>
-                      Я ем малыми порциями, но часто. Это повышает мою продуктивность в разы. В течение дня сижу за компьютером и часто отходить в кафе или на кухню просто не могу себе позволить. А батончик – он всегда под рукой. Это приятно и удобно. 
-                    </p>
+              <ul class="reviews__list">
+                <li class="reviews__item review active" data-linked="one">
+                  <div class="review__avatar">
+                    <img src="./img/avatars/billy.png" alt="" class="review__avatar-img">
                   </div>
-                  <div class="reviews__author">Билли Айлиш</div>
-                </article>
-              </div>
+                  <article class="review__content">
+                    <h3 class="review__title">Отличный звук</h3>
+                    <div class="review__text">
+                      <p>
+                        Я ем малыми порциями, но часто. Это повышает мою продуктивность в разы. В течение дня сижу за компьютером и часто отходить в кафе или на кухню просто не могу себе позволить. А батончик – он всегда под рукой. Это приятно и удобно.
+                      </p>
+                    </div>
+                    <div class="review__author">Билли Айлиш</div>
+                  </article>
+                </li>
+                <li class="reviews__item review" data-linked="two">
+                  <div class="review__avatar">
+                    <img src="./img/avatars/vadim.png" alt="" class="review__avatar-img">
+                  </div>
+                  <article class="review__content">
+                    <h3 class="review__title">Крутой дизайн</h3>
+                    <div class="review__text">
+                      <p>
+                        После тренировок всегда хочется быстро закинуться чем-то белковым, потому что до дома ещё нужно доехать. А кушать хочется. Протеиновые батончики всегда выручают в этом плане. Спасибо производителю за этот качественный и экологичный продукт. 
+                      </p>
+                    </div>
+                    <div class="review__author">Вадим Грачев</div>
+                  </article>
+                </li>
+                <li class="reviews__item review" data-linked="three">
+                  <div class="review__avatar">
+                    <img src="./img/avatars/maria.png" alt="" class="review__avatar-img">
+                  </div>
+                  <article class="review__content">
+                    <h3 class="review__title">На долго хватает заряда</h3>
+                    <div class="review__text">
+                      <p>
+                        Батончики понравились. На мой взгляд слегка завышена цена по сравнению с конкурентами, однако, как говорится – оно того стоит. Нравится носить с собой, нравится держать в руке. Ну и конечно же, кушать. Идеально утоляют голод, хоть и не надолго. Через час уже ем ещё один. Но это скорее плюс, чем минус.
+                      </p>
+                    </div>
+                    <div class="review__author">Мария Орлова</div>
+                  </article>
+                </li>
+              </ul>
             </div>
             <ul class="reviews__switcher">
-              <li class="reviews__switcher-item interactive-avatar interactive-avatar--active">
-                <a href="" class="interactive-avatar__link">
+              <li class="reviews__switcher-item interactive-avatar active">
+                <a href="" class="interactive-avatar__link" data-open="one">
                   <img src="./img/avatars/billy.png" alt="" class="interactive-avatar__img">
                 </a>
               </li>
               <li class="reviews__switcher-item interactive-avatar">
-                <a href="" class="interactive-avatar__link">
+                <a href="" class="interactive-avatar__link" data-open="two">
                   <img src="./img/avatars/vadim.png" alt="" class="interactive-avatar__img">
                 </a>
               </li>
               <li class="reviews__switcher-item interactive-avatar">
-                <a href="" class="interactive-avatar__link">
+                <a href="" class="interactive-avatar__link" data-open="three">
                   <img src="./img/avatars/maria.png" alt="" class="interactive-avatar__img">
                 </a>
               </li>
             </ul>
-          </div>
         </div>
       </section>
       <section class="section order-section">
         <div class="container order-section__container">
           <h2 class="section__title">закажите доставку</h2>
-          <form action="#" method="get" class="form">
+          <form class="form">
+            <input type="hidden" name="to" value="somewhere@mail.com">
             <div class="form__col">
               <div class="form__row">
                 <label class="form__block">
                   <div class="form__title">Имя</div>
-                  <input type="text" name="username" class="form__input">
+                  <input type="text" name="name" class="form__input">
                 </label>
                 <label class="form__block">
                   <div class="form__title">Телефон</div>
-                  <input type="text" name="phone-number" class="form__input">
+                  <input type="text" name="phone" class="form__input">
                 </label>
               </div>
               <div class="form__row">
@@ -334,7 +563,7 @@
               <div class="form__row">
                 <label class="form__block">
                   <div class="form__title">Комментарий</div>
-                  <textarea class="form__input form__input--textarea"></textarea>
+                  <textarea class="form__input form__input--textarea" name="comment"></textarea>
                 </label>
               </div>
               <div class="form__controls">
@@ -479,6 +708,27 @@
       </ul>
     </nav>
   </div>
+  <div id="modal" class="modal">
+    <div class="modal__container">
+      <div class="modal__content">
+        Сообщение отправлено
+      </div>
+      <div class="modal__button-container">
+        <a href="#" class="btn app-submit-btn">Закрыть</a>
+      </div>
+    </div>
+  </div>
+  <script src="./js/jquery-3.6.3.min.js"></script>
+
   <script src="./js/fullscreen-menu.js"></script>
+  <script src="./js/review-switcher.js"></script>
+  <script src="./js/acco-vertical.js"></script>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
+  <script src="./js/slider.js"></script>
+
+  <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
+  <script src="./js/modal.js"></script>
 </body>
 </html>
